apps/base/mealie/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mealie
  labels:
    app: mealie
spec:
  type: ClusterIP
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
  selector:
    app: mealie
